# hyprshot

./: .SRCINFO  .gitignore  Cargo.toml  PKGBUILD  README.md  build.rs
resources/: hyprshot.desktop  resources.gresource.xml
src/: action.rs  main.rs
src/capture/: clipboard.rs  mod.rs
src/capture/screenshot/: capture.rs  export.rs  mod.rs
src/common/: cairo_blur.rs  cursor.rs  mod.rs
src/modules/screenshot/: canvas.rs  events.rs  mod.rs  render.rs  state.rs  toolbar.rs  ui.rs
